crates/usfm_parser/tests/snapshots/tcdocs__biblica_CrossRefWithPipe.snap
---
source: usfm_parser/tests/snapshot.rs
description: "\\id GEN \n\\usfm 3.1\n\\c 2\n\\p\n\\v 5 Now no shrub had yet appeared on the earth\\f + \\fr 2:5 \\ft Or \\fqa land\\ft ; also in \\ref verse 6|GEN 2:6\\ref*\\f* and no plant had yet sprung up, for the \\nd Lord\\nd* God had not sent rain on the earth and there was no one to work the ground,"
---
Book GEN "" @0..7
Para usfm@9..19
  Text "3.1"@15..19
ChapterStart 2@19..23
Para p@24..274
  VerseStart 5@27..31
  Text "Now no shrub had yet appeared on the earth"@32..74
  Note f caller=+@74..145
    Char fr@79..87
      Text "2:5 "@83..87
    Char ft@87..94
      Text "Or "@91..94
    Char fqa@94..103
      Text "land"@99..103
    Char ft@103..145
      Text "; also in "@107..117
      Char ref@117..142 "GEN 2:6"
        Text "verse 6"@122..129
  Text " and no plant had yet sprung up, for the "@145..186
  Char nd@186..198
    Text "Lord"@190..194
  Text " God had not sent rain on the earth and there was no one to work the ground,"@198..274
  VerseEnd 5
ChapterEnd 2
