crates/usfm_parser/tests/snapshots/tcdocs__paratextTests_FootnoteNotClosed.snap
---
source: usfm_parser/tests/snapshot.rs
description: "\\id GEN\r\n\\ib\r\n\\ip Hi mom.\r\n\\c 1\r\n\\p \\v 1 Hi \\nd Bob\\nd*.\r\n\\p And\\f + \\fr 1.1 \\ft stuff\r\n\\b\r\n"
---
Book GEN "" @0..7
Para ib@9..14
Para ip@14..27
  Text "Hi mom."@18..27
ChapterStart 1@27..31
Para p@33..58
  VerseStart 1@36..40
  Text "Hi "@41..44
  Char nd@44..55
    Text "Bob"@48..51
  Text "."@55..58
Para p@58..88
  Text "And"@61..64
  Note f caller=+@64..88
    Char fr@69..77
      Text "1.1 "@73..77
    Char ft@77..88
      Text "stuff"@81..88
  VerseEnd 1
Para b@88..92
ChapterEnd 1
--- diagnostics
error[note-not-closed] @64..66: `\f` is not closed by `\f*`
warning[character-style-not-closed] @77..80: `\ft` was still open at `\b`
